--- a/perldoc/ko/perl/5.10/perlfunc.pod
+++ b/perldoc/ko/perl/5.10/perlfunc.pod
@@ -9791,11 +9791,10 @@ modules does not risk altering your namespace.
 
 =end original
 
-EXPR が裸の単語であるときには、標準モジュールのロードを
-簡単にするように、require は拡張子が "F<.pm>" であり、
-"F<::>" を "F</>" に変えたものがファイル名であると仮定します。
-この形式のモジュールロードは、
-名前空間を変更してしまう危険はありません。
+EXPR 이 bareword 인 때에는 표준 모듈의 로드를 간단히 하다록 
+require 는 확장자가 "F<.pm>" 이고, "F<::>" 를 "F</>" 로 바꾼 것이 
+파일이름인 것으로 가정합니다. 이 형식의 모듈로드는 이름공간을 
+변경해버리는 위험은 없습니다.
 
 =begin original
 
@@ -9803,7 +9802,7 @@ In other words, if you try this:
 
 =end original
 
-言い換えると、以下のようにすると:
+바꿔말해서, 아래처럼 하면:
 
         require Foo::Bar;    # a splendid bareword
 
@@ -9814,8 +9813,8 @@ directories specified in the C<@INC> array.
 
 =end original
 
-require 関数は C<@INC> 配列で指定されたディレクトリにある
-"F<Foo/Bar.pm>" ファイルを探します。
+require 함수는 C<@INC> 배열에서 지정된 디렉토리에 있는 "F<Foo/Bar.pm>" 
+파일을 찾습니다.
 
 =begin original
 
@@ -9823,7 +9822,7 @@ But if you try this:
 
 =end original
 
-しかし、以下のようにすると:
+그러나 아래처럼 하면:
 
         $class = 'Foo::Bar';
         require $class;	     # $class is not a bareword
@@ -9837,9 +9836,9 @@ will complain about not finding "F<Foo::Bar>" there.  In this case you can do:
 
 =end original
 
-require 関数は @INC 配列の "F<Foo::Bar>" ファイルを探し、
-おそらくそこに "F<Foo::Bar>" がないと文句をいうことになるでしょう。
-このような場合には、以下のようにします:
+require 함수는 @INC 배열의 "F<Foo:;Bar>" 파일을 찾고, 
+아마 그곳에 "F<Foo::Bar>" 가 없으면 투정를 부릴지도 모르겠죠.
+이런 경우에는 아래처럼 합니다:
 
         eval "require $class";
 
@@ -9854,12 +9853,11 @@ extension.
 
 =end original
 
-引数が裸の単語の場合、C<require> がどのようにファイルを探すかを
-理解してください; 水面下でちょっとした追加の機能があります。
-C<require> が拡張子 "F<.pm>" のファイルを探す前に、まず拡張子 "F<.pmc>" を
-持つファイルを探します。
-このファイルが見つかると、このファイルが拡張子 "F<.pm>" の代わりに
-読み込まれます。
+인수가 bareword 인 경우, C<require> 가 어떻게 파일을 찾는 가를 이해해 주세요;
+보이지 않는 곳에 조금 추가한 기능이 있습니다.
+C<require> 가 확장자 "F<.pm>"의 파일을 찾기 전에, 우선 확장자 "F<.pmc>" 를
+가진 파일을 탐색합니다.
+이 파일을 찾으면, 이 파일이 확장자 "F<.pm>" 대신에 읽혀집니다.
 
 =begin original
 
@@ -9869,10 +9867,9 @@ references, array references and blessed objects.
 
 =end original
 
-@INC 配列に直接 Perl コードを入れることで、インポート機能にフックを
-挿入できます。
-3 種類のフックがあります: サブルーチンリファレンス、配列リファレンス、
-bless されたオブジェクトです。
+@INC 배열에 직접 Perl 코드를 넣음으로 임포트 기능에 후크를 투입할 수 있습니다.
+3 종료의 후크가 있습니다: 서브루틴 리퍼런스, 배열 리퍼런스, bless 된 
+오브젝트입니다.
 
 =begin original
 
@@ -9885,15 +9882,14 @@ following order:
 
 =end original
 
-サブルーチンへのリファレンスは一番単純な場合です。
-インクルード機能が @INC を走査してサブルーチンに出会った場合、この
-サブルーチンは二つの引数と共に呼び出されます;
-一つ目は自身へのリファレンス、二つ目はインクルードされるファイル名
-("F<Foo/Bar.pm>" など)です。
-サブルーチンは C<undef> か、インクルードするファイルが読み込まれる
-ファイルハンドルを返します。
-サブルーチンは何も返さないか、以下の順で最大 3 つの値のリストを
-返します。
+서브루틴으로의 리퍼런스는 제일 단순한 경우입니다.
+include 기능이 @INC 를 통해서 서브루틴과 만난 경우, 이 서브루틴은 
+2개의 인수와 함께 호출됩니다;
+첫번째는 자신의 리퍼런스, 두번째는 include 된 파일이름("F<Foo/Bar.pm>" 등)
+입니다. 서브루틴은 C<undef> 나, include 하는 파일이 읽혀지는 파일핸들을 
+반환합니다.
+서브루틴은 아무것도 반환하지 않든가, 아래의 순서로 최대 3개의 값을 가진 
+리스트를 반환합니다.
 
 =over
 
@@ -9905,7 +9901,7 @@ A filehandle, from which the file will be read.
 
 =end original
 
-ファイルが読み込まれるファイルハンドル。
+파일이 읽혀지는 파일핸들.
 
 =item 2
 
@@ -9921,13 +9917,12 @@ returned.
 
 =end original
 
-サブルーチンへのリファレンス。
-(一つ前のアイテムである)ファイルハンドルがない場合、
-サブルーチンは呼び出し毎に一行のソースコードを生成し、その行を C<$_> に
-書き込んで 1 を返し、それから「ファイル終端」で 0 を返すものと想定されます。
-ファイルハンドルがある場合、サブルーチンは単純なソースフィルタとして
-振舞うように呼び出され、行は C<$_> から読み込まれます。
-再び、有効な行ごとに 1 を返し、全ての行を返した後では 0 を返します。
+서브루틴으로의 리퍼런스.
+(하나 앞의 아이템인) 파일핸들이 없는 경우, 1 을 써넣어서 반환하고, 
+그리고 "파일끝단"에서 0을 반환하는 것으로 상정됩니다.
+파일핸들이 있는 경우, 서브루틴은 단순한 소스필터로 행동하도록 호출되고,
+줄은 C<$_> 에서 읽혀집니다.
+다시, 유효한 행마다 1을 반환하고, 모든 행을 반환한 뒤에는 0을 반환합니다.
 
 =item 3
 
@@ -9938,9 +9933,9 @@ reference to the subroutine itself is passed in as C<$_[0]>.
 
 =end original
 
-サブルーチンのための状態(オプション)。
-状態は C<$_[1]> として渡されます。
-サブルーチンへのリファレンス自身は C<$_[0]> として渡されます。
+서브루틴을 위한 상태(옵션).
+상태는 C<$_[1]> 로 건네집니다.
+서브루틴으로의 리퍼런스 자신은 C<$_[0]> 으로 건네집니다.
 
 =back
 
@@ -9954,11 +9949,11 @@ ignored and return value processing will stop there.
 
 =end original
 
-空リスト、C<undef>、または上記の最初の 3 つの値のどれとも一致しないものが
-返されると、C<require> は @INC の残りの要素を見ます。
-このファイルハンドルは実際のファイルハンドル(厳密には型グロブ、型グロブへの
-リファレンス、bless されているかされていないか)である必要があります -
-tie されたファイルハンドルは無視され、返り値の処理はそこで停止します。
+빈리스트, C<undef> 또는 위의 최초의 3개의 값 중 어느것도 일치하지 않는 것이
+반환되면, C<require> 는 @INC 의 남은 요소를 봅니다.
+이 파일핸들은 실제 파일핸들(엄밀하게는 형태 glob, 형태 glob 로의 리퍼런스,
+bless 되어 있는지 아닌지)일 필요가 있습니다.
+tie 된 파일핸들은 무시되고, 반환값의 처리는 거기서 정지합니다.
 
 =begin original
 
@@ -9969,11 +9964,10 @@ the subroutine.
 
 =end original
 
-フックが配列のリファレンスの場合、その最初の要素はサブルーチンへの
-リファレンスでなければなりません。
-このサブルーチンは上述のように呼び出されますが、その最初の引数は
-配列のリファレンスです。
-これによって、間接的にサブルーチンに引数を渡すことが出来ます。
+후크가 배열의 리퍼런스인 경우, 그 최초의 요소는 서브루틴으로의 리퍼런스가 
+아니면 안됩니다.
+이 서브루틴은 위에 기술한 것처럼 호출되지만, 첫번째 인수는 배열의 리퍼런스
+입니다. 이에 따라 간접적으로 서브루틴에 인수를 넘길 수 있습니다.
 
 =begin original
 
@@ -9981,7 +9975,7 @@ In other words, you can write:
 
 =end original
 
-言い換えると、以下のように書いたり:
+바꿔말해서, 아래처럼 쓰거나:
 
     push @INC, \&my_sub;
     sub my_sub {
@@ -9995,7 +9989,7 @@ or:
 
 =end original
 
-または以下のように書けます:
+또는 아래처럼 쓸 수 있습니다:
 
     push @INC, [ \&my_sub, $x, $y, ... ];
     sub my_sub {
@@ -10014,11 +10008,11 @@ into package C<main>.)  Here is a typical code layout:
 
 =end original
 
-フックがオブジェクトの場合、INC メソッドを提供している必要があります;
-それが、最初の引数をオブジェクト自身として上述のように呼び出されます。
-(修飾されていない C<INC> は常にパッケージ C<main> に強制されるため、
-サブルーチン名は完全修飾する必要があることに注意してください。)
-以下は典型的なコードレイアウトです:
+후크가 오브젝트인 경우, INC 메소드를 제공할 필요가 있습니다;
+그것이 첫번째 인수를 오브젝트 자신으로 위에 기술한 대로 호출됩니다.
+(수식되어 있지 않은 C<INC> 는 항상 패키지 C<main> 으로 강제되기 때문에 
+서브루틴 이름은 완전수식할 필요가 있는 것에 주의해주세요.)
+아래는 전형적인 코드 레이아웃입니다:
 
     # In Foo.pm
     package Foo;
@@ -10038,9 +10032,9 @@ corresponding to the files they have loaded. See L<perlvar/%INC>.
 
 =end original
 
-これらのフックは、読み込まれるファイルに対応する %INC エントリを
-セットすることも許可することに注意してください。
-L<perlvar/%INC> を参照してください。
+이 후크들은 읽혀진 파일에 대한 %INC 엔트리를 설정하는 것도 허가하는 것에 
+주의하세요.
+L<perlvar/%INC> 를 참조해주세요.
 
 =begin original
 
@@ -10048,8 +10042,8 @@ For a yet-more-powerful import facility, see L</use> and L<perlmod>.
 
 =end original
 
-より強力な import 機能については、このドキュメントの
-L</use> の項と、L<perlmod> を参照してください。
+보다 강력한 import 기능에 대해서는 이 문서의 L</use> 의 항과 
+L<perlmod> 를 참조해주세요.
 
 =item reset EXPR
 X<reset>
@@ -10069,17 +10063,15 @@ only variables or searches in the current package.  Always returns
 
 =end original
 
-通常、ループの最後に、変数をクリアし、C<??> 検索を再び
-動作するようにリセットするため、C<continue> ブロックで使われます。
-EXPR は、文字を並べたもの (範囲を指定するのに、ハイフンが使えます) と
-解釈されます。
-名前がその文字のいずれかで始まる変数や配列は、
-最初の状態にリセットされます。
-EXPR を省略すると、1 回検索 (C<?PATTERN?>) を再びマッチするように
-リセットできます。
-カレントパッケージの変数もしくは検索だけがリセットされます。
-常に 1 を返します。
-例:
+통상, 루프의 끝에 변수를 클리어해서 C<??> 검색을 다시 동작하도록 리셋하기위해
+C<continue> 블록에서 사용됩니다.
+EXPR 은 문자를 나열한 것(범위를 지정하는 것에 하이픈을 사용할 수 있습니다)으로
+해석됩니다.
+이름이 그 문자중 어느 것으로 시작되는 변수나 배열은 최초의 상태로 리셋됩니다.
+EXPR 을 생략하면, 첫번째 검색 (C<?PATTERN?>) 을 다시 매치하도록 리셋할 수 있습니다.
+최근 패키지의 변수 혹은 검색만이 리셋됩니다.
+항상 1을 반환합니다.
+예제:
 
     reset 'X';		# reset all X variables
     reset 'a-z';	# reset lower case variables
@@ -10095,13 +10087,12 @@ See L</my>.
 
 =end original
 
-reset C<"A-Z"> とすると、C<@ARGV>, C<@INC> 配列や C<%ENV> ハッシュも
-なくなってしまいますから、止めた方が良いでしょう。
-パッケージ変数だけがリセットされます。
-レキシカル変数は、影響を受けませんが、スコープから外れれば、
-自動的に綺麗になりますので、これからは、こちらを使うようにした方が
-よいでしょう。
-L</my> を参照してください。
+reset C<"A-Z"> 라고 하면 C<@ARGV>, C<@INC> 배열이나 C<%ENV> 해쉬도 
+없어지기 때문에, 관두는 편이 좋습니다.
+패키지 변수만이 리셋됩니다.
+렉시컬 변수는 영향을 받지 않지만, 영역에서 벗어나면 자동적으로 
+깨끗하게 되기때문에, 이제부터는 이쪽을 사용하는 편이 좋을 겁니다.
+L</my> 도 참조해주세요.
 
 =item return EXPR
 X<return>
@@ -10119,14 +10110,13 @@ scalar context, and (of course) nothing at all in a void context.
 
 =end original
 
-サブルーチン, C<eval>, C<do FILE>  から EXPR で与えられた値をもって、
-リターンします。
-EXPR の評価は、返り値がどのように使われるかによって
-リスト、スカラ、無効コンテキストになります。
-またコンテキストは実行毎に変わります(C<wantarray> を参照してください)。
-EXPR が指定されなかった場合は、リストコンテキストでは空リストを、
-スカラコンテキストでは未定義値を返します。
-そして(もちろん)無効コンテキストでは何も返しません。
+서브루틴, C<eval>, C<do FILE> 에서 EXPR 로 주어진 값을 가지고 리턴합니다.
+EXPR 의 평가는 반환값이 어떻게 사용되는 가에 의해 리스트, 스칼라,
+무효 컨텍스트가 됩니다.
+또 컨텍스트는 실행마다 바뀝니다(C<wantarray> 를 참조해주세요).
+EXPR 이 지정되지 않은 경우, 리스트 컨텍스트에서는 빈 리스트를 
+스칼라 컨텍스트에서는 미정의값을 반환합니다.
+그리고(물론) 무효 컨텍스트에서는 아무것도 반환하지 않습니다.
 
 =begin original
 
@@ -10136,8 +10126,8 @@ evaluated.)
 
 =end original
 
-(サブルーチン, eval, do FILE に明示的に C<return> が
-なければ、最後に評価された値で、自動的にリターンします。)
+(서브루틴, eval, do FILE 에 명시적으로 C<return> 이 없으면, 
+마지막에 평가된 값으로 자동적으로 return 합니다)
 
 =item reverse LIST
 X<reverse> X<rev> X<invert>
@@ -10151,10 +10141,10 @@ in the opposite order.
 
 =end original
 
-リストコンテキストでは、LIST を構成するよ要素を逆順に並べた
-リスト値を返します。
-スカラコンテキストでは、LIST の要素を連結して、
-全ての文字を逆順にした文字列を返します。
+리스트 컨텍스트에서는 LIST 를 구성하는 요소를 역순으로 나열한 리스트를 
+반환합니다.
+스칼라 컨텍스트에서는 LIST 의 요소를 연결해서 모든 문자를 거꾸로 나열한 
+문자열을 반환합니다.
 
     print reverse <>;		# line tac, last line first
 
@@ -10167,7 +10157,7 @@ Used without arguments in scalar context, reverse() reverses C<$_>.
 
 =end original
 
-スカラコンテキストで引数なしで使うと、reverse() は C<$_> を逆順にします。
+스칼라컨텍스트에서는 인수없 사용하면 reverse() 는 C<$_> 를 역순으로 합니다.
 
 =begin original
 
@@ -10179,11 +10169,11 @@ on a large hash, such as from a DBM file.
 
 =end original
 
-この演算子はハッシュの逆順にするのにも便利ですが、いくつかの弱点があります。
-元のハッシュで値が重複していると、それらのうち一つだけが
-逆順になったハッシュのキーとして表現されます。
-また、これは一つのハッシュをほどいて完全に新しいハッシュを作るので、
-DBM ファイルからのような大きなハッシュでは少し時間がかかります。
+이 연산자는 해쉬의 역순으로 하는 것에도 편리하지만, 몇가지 약점이 있습니다.
+원래 해쉬로 값을 중복하면 그것들 중 하나만이 역순이 된 해쉬의 값으로 
+표현됩니다.
+또, 이것은 하나의 해쉬를 남겨두고 완전히 새로운 해쉬를 만들기 때문에, 
+DBM 파일에서 처럼 큰 해쉬에서는 조금 시간이 걸립니다.
 
     %by_name = reverse %by_address;	# Invert the hash
 
